PR/51973: Use proper fd for AuthorizedKeysCommand